--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://xirekz:admin@cluster0.yfzz5gk.mongodb.net/EnerGauge?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://xirekz:admin@cluster0.yfzz5gk.mongodb.net/EnerGauge?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=your_secret_key
