--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
