--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.2",
