--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
+    "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.2",
     "@mui/x-data-grid": "^7.26.0",
     "axios": "^1.7.9",
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
+    "styled-components": "^6.1.15",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
